--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -434,9 +434,8 @@ a{ color:inherit; }
 
 <script src="/assets/js/88st-analytics.js"></script>
 
-<!-- 88ST Theme Toggle (system/dark/light) -->
-<script src="/assets/88st-theme.js"></script>
-<link rel="stylesheet" href="/assets/88st-theme.css">
+<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210">
+<script defer src="/assets/88st-theme.js?v=20260210"></script>
 </head>
 <body>
 <section class="rel-links" aria-label="랜딩 바로가기" style="margin-top:16px;">
@@ -507,7 +506,7 @@ a{ color:inherit; }
           <h3>한 번에 복사해서 쓰는 “10초 점검 템플릿”</h3>
           <p>아래 템플릿을 그대로 복사해서, 문의/확인할 때 체크박스로 쓰면 실수가 확 줄어듭니다.</p>
           <div class="copybar">
-            <button class="copybtn" id="copyChecklist">체크리스트 복사</button>
+            <button type="button" class="copybtn" id="copyChecklist">체크리스트 복사</button>
             <div class="copynote" id="copyNote">클릭하면 텍스트가 복사됩니다.</div>
           </div>
         </div>
