--- a/ipl/index.html
+++ b/ipl/index.html
@@ -314,9 +314,8 @@ a{ color:inherit; }
 
 <script src="/assets/js/88st-analytics.js"></script>
 
-<!-- 88ST Theme Toggle (system/dark/light) -->
-<script src="/assets/88st-theme.js"></script>
-<link rel="stylesheet" href="/assets/88st-theme.css">
+<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210">
+<script defer src="/assets/88st-theme.js?v=20260210"></script>
 </head>
 
 <body>
