--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -57,9 +57,8 @@ input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rg
 <script src="/assets/js/88st-analytics.js"></script>
 <script src="/assets/js/vendor-teasers.js" defer></script>
 
-<!-- 88ST Theme Toggle (system/dark/light) -->
-<script src="/assets/88st-theme.js"></script>
-<link rel="stylesheet" href="/assets/88st-theme.css">
+<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210">
+<script defer src="/assets/88st-theme.js?v=20260210"></script>
 </head>
 <body>
 <div class="wrap">
@@ -105,8 +104,8 @@ input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rg
         </div>
       </div>
       <div class="btnrow">
-        <button class="btn primary" id="calcBtn">계산</button>
-        <button class="btn" id="resetBtn">예시값</button>
+        <button type="button" class="btn primary" id="calcBtn">계산</button>
+        <button type="button" class="btn" id="resetBtn">예시값</button>
       </div>
       <div class="small" style="margin-top:10px;">
         Kelly 공식(승/패 단일): <b>f* = (b·p - q) / b</b>, b=odds-1, q=1-p
