--- a/index_fixed.html
+++ b/index_fixed.html
@@ -1838,8 +1838,8 @@ const INSIGHTS_BY_SPORT = {
 
 <script src="/assets/js/88st-analytics.js"></script>
 
-<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210">
-<script defer src="/assets/88st-theme.js?v=20260210"></script>
+<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_2">
+<script defer src="/assets/88st-theme.js?v=20260210_2"></script>
 </head>
 <body>
 <div class="notice-bar">
