--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -57,8 +57,8 @@ input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rg
 <script src="/assets/js/88st-analytics.js"></script>
 <script src="/assets/js/vendor-teasers.js" defer></script>
 
-<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210">
-<script defer src="/assets/88st-theme.js?v=20260210"></script>
+<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_2">
+<script defer src="/assets/88st-theme.js?v=20260210_2"></script>
 </head>
 <body>
 <div class="wrap">
