--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -434,8 +434,8 @@ a{ color:inherit; }
 
 <script src="/assets/js/88st-analytics.js"></script>
 
-<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210">
-<script defer src="/assets/88st-theme.js?v=20260210"></script>
+<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_2">
+<script defer src="/assets/88st-theme.js?v=20260210_2"></script>
 </head>
 <body>
 <section class="rel-links" aria-label="랜딩 바로가기" style="margin-top:16px;">
