--- a/casino/index.html
+++ b/casino/index.html
@@ -224,8 +224,8 @@ a{ color:inherit; }
 
 <script src="/assets/js/88st-analytics.js"></script>
 
-<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210">
-<script defer src="/assets/88st-theme.js?v=20260210"></script>
+<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_2">
+<script defer src="/assets/88st-theme.js?v=20260210_2"></script>
 </head>
 
 <body>
