--- a/tool-odds/index.html
+++ b/tool-odds/index.html
@@ -221,8 +221,8 @@ a{ color:inherit; }
 <script src="/assets/js/vendor-teasers.js" defer></script>
 <link rel="stylesheet" href="/assets/vendor-teasers.css">
 
-<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210">
-<script defer src="/assets/88st-theme.js?v=20260210"></script>
+<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_2">
+<script defer src="/assets/88st-theme.js?v=20260210_2"></script>
 </head>
 <body>
   <div class="wrap">
